--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
                 </nav>
             </div>
         </header>
+
+        <main>
+            <section class="container">
+                
+
+            </section>
+
+        </main>
+
+
+
         <script src="./js/main.js"></script>
     </body>
 </html>
